@@ -22,7 +22,7 @@ dnl Copyright (C) 1996, 1997 John W. Eaton
 ### 02111-1307, USA. 
 
 AC_INIT
-AC_REVISION($Revision: 1.401 $)
+AC_REVISION($Revision: 1.402 $)
 AC_PREREQ(2.52)
 AC_CONFIG_SRCDIR([src/octave.cc])
 AC_CONFIG_HEADER(config.h)
@@ -180,11 +180,8 @@ gxx_version=`$CXX -v 2>&1 | grep "^.*g.. version" | \
 
 cxx_auto_instantiate_templates=yes
 case "$gxx_version" in
-  1.* | 2.[[0123456]].* | 2.7.[01]*)
-    AC_MSG_ERROR([g++ version $gxx_version will not work to compile Octave])
-  ;;
-  2.8* | 2.9[[1-6]]*)
-    cxx_auto_instantiate_templates=no
+  1.* | 2.[[0123456789]].*)
+    AC_MSG_ERROR([g++ version $gxx_version will probably fail to compile Octave])
   ;;
 esac
 
